# wifi-sleep-monitoring

./: .gitignore  README.md
code/R/: Analysis.Rmd  STI_plots.R  get_csv_for_rerun.R
code/csi_receiver/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
code/csi_receiver/components/fft/: CMakeLists.txt
code/csi_receiver/components/utilities/: CMakeLists.txt  utilities.c
code/csi_receiver/components/utilities/include/: utilities.h
code/csi_receiver/components/utilities/test/: CMakeLists.txt  test_utilities.c
code/csi_receiver/main/: CMakeLists.txt  Kconfig.projbuild  csi_receiver.c  idf_component.yml  model.cc  model.cpp  model.h  run_tf_inference.cc  run_tf_inference.cpp  run_tf_inference.h  using_eigen.cpp  using_eigen.h  utilities.c
code/csi_receiver/test/: CMakeLists.txt  sdkconfig.old
code/csi_receiver/test/main/: CMakeLists.txt  tests_main.c
code/csi_sender/: README.md  sdkconfig
code/csi_sender/main/: CMakeLists.txt  Kconfig.projbuild  csi_sender.c
code/live_visualization/: main.py  testing.py  visualization.py
code/notebooks/: PrecomputeThingsForCSISensing.ipynb
data/sleep_lab/clean_data/gt/blanket/back/: AF.txt  ECG II.txt  Herzfrequenz Kurve.txt  RIP Abdom.txt  RIP Thora.txt
data/sleep_lab/clean_data/gt/blanket/left/: AF.txt  ECG II.txt  Herzfrequenz Kurve.txt  RIP Abdom.txt  RIP Thora.txt
data/sleep_lab/clean_data/gt/blanket/right/: AF.txt  ECG II.txt  Herzfrequenz Kurve.txt  RIP Abdom.txt  RIP Thora.txt
data/sleep_lab/clean_data/gt/blanket/stomach/: AF.txt  ECG II.txt  (+3 more)
(+20 files in other folders)
